fix: support root-level Ion arrays in Avro roundtrip
Avro requires a RECORD at the top level. When the Ion input is a bare
array, schema inference now wraps it in a synthetic root RECORD with a
single "value" field. On read, AvroDeserializer detects that wrapper
and strips it, so the roundtrip is transparent to the user.